--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Same Tab Override",
-  "version": "1.0",
+  "version": "0.0.0",
   "description": "Links open in a new tab? No thanks.",
   "icons": {},
   "content_scripts": [
@@ -12,12 +12,10 @@
   ],
   "browser_specific_settings": {
     "gecko": {
-      "id": "same-tab-override@addons.bheesham.com",
-      "strict_min_version": "113.0"
+      "id": "same-tab-override@addons.bheesham.com"
     },
     "gecko_android": {
-      "id": "same-tab-override@addons.bheesham.com",
-      "strict_min_version": "113.0"
+      "id": "same-tab-override@addons.bheesham.com"
     }
   }
 }
