--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Same Tab Override",
-  "version": "0.0.4",
+  "version": "0.0.5-rc1",
   "description": "Links open in a new tab? No thanks.",
   "icons": {},
   "content_scripts": [
